<resources>
    <string name="app_name">Commander Organizer</string>
    <string name="add_deck_menu">Add Deck</string>
    <string name="deck_list_edit_text">or paste your formatted list here.</string>
    <string name="submit_deck_button">Submit Deck</string>
    <string name="enter_card_autocomplete">Enter Card Name</string>
    <string name="submit_card_button">ADD</string>
    <string name="cards_in_one_other_deck">Cards in one other deck</string>
    <string name="cards_in_multiple_other_decks">Cards in multiple other decks</string>
    <string name="cards_in_this_deck_only">Cards in this deck only</string>
</resources>